# korazon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lgtm.yml
cmake/: FindGtkmm.cmake  FindPipeWire.cmake  Findsystemd.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  GetVersionFromGit.cmake
include/: CMakeLists.txt
include/korazon/: application.hxx  application_ui.hxx  configuration.hxx  extended_mutex.hxx  korazon.hxx  loggable.hxx  pipewire.hxx  utils.hxx
include/korazon/pipewire/: details.hxx
src/: .application.cxx.swp  CMakeLists.txt  application.cxx  application_ui.cxx  configuration.cxx  korazon.cxx  loggable.cxx  main.cxx  pipewire.cxx
src/pipewire/: details.cxx
